// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TheNavigation 閉じた時のスナップショット 1`] = `
"<div>
  <nav>
    <div>
      <div class=\\"nav-bar\\">
        <div class=\\"nav-bar__box\\"><a class=\\"base-link--extend\\">ダミー</a>
          <div class=\\"base-nav-icon base-nav-icon--extend\\"><button><span class=\\"base-nav-icon__border base-nav-icon__top base-nav-icon__top--close\\"></span> <span class=\\"base-nav-icon__border base-nav-icon__middle\\"></span> <span class=\\"base-nav-icon__border base-nav-icon__bottom base-nav-icon__bottom--close\\"></span> <span class=\\"base-nav-icon__text\\">
        NAVI
      </span></button></div>
        </div>
      </div>
    </div>
    <div>
      <transition-stub name=\\"nav-fade\\">
        <div class=\\"nav-list\\" style=\\"display: none;\\">
          <ul>
            <li>
              <div>
                <div class=\\"nav-item\\"><a class=\\"base-link--extend\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミー1の画像\\" class=\\"base-img--extend base-img--lg\\">
                    <p class=\\"base-text--extend\\">ダミー1</p>
                  </a></div>
              </div>
            </li>
            <li>
              <div>
                <div class=\\"nav-item\\"><a class=\\"base-link--extend\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミー2の画像\\" class=\\"base-img--extend base-img--lg\\">
                    <p class=\\"base-text--extend\\">ダミー2</p>
                  </a></div>
              </div>
            </li>
            <li>
              <div>
                <div class=\\"nav-item\\"><a class=\\"base-link--extend\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミー3の画像\\" class=\\"base-img--extend base-img--lg\\">
                    <p class=\\"base-text--extend\\">ダミー3</p>
                  </a></div>
              </div>
            </li>
            <li>
              <div>
                <div class=\\"nav-item\\"><a class=\\"base-link--extend\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミー4の画像\\" class=\\"base-img--extend base-img--lg\\">
                    <p class=\\"base-text--extend\\">ダミー4</p>
                  </a></div>
              </div>
            </li>
          </ul>
        </div>
      </transition-stub>
    </div>
  </nav>
</div>"
`;

exports[`TheNavigation 開いた時のスナップショット 1`] = `
"<div>
  <nav>
    <div>
      <div class=\\"nav-bar\\">
        <div class=\\"nav-bar__box\\"><a class=\\"base-link--extend\\">ダミー</a>
          <div class=\\"base-nav-icon base-nav-icon--extend\\"><button><span class=\\"base-nav-icon__border base-nav-icon__top base-nav-icon__top--open\\"></span> <span class=\\"base-nav-icon__border base-nav-icon__middle base-nav-icon__middle--fade\\"></span> <span class=\\"base-nav-icon__border base-nav-icon__bottom base-nav-icon__bottom--open\\"></span> <span class=\\"base-nav-icon__text\\">
        CLOSE
      </span></button></div>
        </div>
      </div>
    </div>
    <div>
      <transition-stub name=\\"nav-fade\\">
        <div class=\\"nav-list\\" style=\\"\\">
          <ul>
            <li>
              <div>
                <div class=\\"nav-item\\"><a class=\\"base-link--extend\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミー1の画像\\" class=\\"base-img--extend base-img--lg\\">
                    <p class=\\"base-text--extend\\">ダミー1</p>
                  </a></div>
              </div>
            </li>
            <li>
              <div>
                <div class=\\"nav-item\\"><a class=\\"base-link--extend\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミー2の画像\\" class=\\"base-img--extend base-img--lg\\">
                    <p class=\\"base-text--extend\\">ダミー2</p>
                  </a></div>
              </div>
            </li>
            <li>
              <div>
                <div class=\\"nav-item\\"><a class=\\"base-link--extend\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミー3の画像\\" class=\\"base-img--extend base-img--lg\\">
                    <p class=\\"base-text--extend\\">ダミー3</p>
                  </a></div>
              </div>
            </li>
            <li>
              <div>
                <div class=\\"nav-item\\"><a class=\\"base-link--extend\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミー4の画像\\" class=\\"base-img--extend base-img--lg\\">
                    <p class=\\"base-text--extend\\">ダミー4</p>
                  </a></div>
              </div>
            </li>
          </ul>
        </div>
      </transition-stub>
    </div>
  </nav>
</div>"
`;
